--- a/app/config/config_test_mysql.yml
+++ b/app/config/config_test_mysql.yml
@@ -2,7 +2,7 @@ imports:
     - { resource: config_test.yml }
 
 parameters:
-    env(DATABASE_HOST): "testdb"
+    env(DATABASE_HOST): "db"
     env(DATABASE_NAME): "enmarche_test"
-    env(DATABASE_USER): "enmarche_test"
-    env(DATABASE_PASSWORD): "enmarche_test"
+    env(DATABASE_USER): "root"
+    env(DATABASE_PASSWORD): "root"
