--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -37,4 +37,8 @@ parameters:
     env(MAILJET_CAMPAIGN_PUBLIC_KEY):          ''
     env(MAILJET_CAMPAIGN_PRIVATE_KEY):         ''
 
+    # Google Maps
     env(GMAPS_API_KEY):         ''
+
+    # Google Tag Manager
+    env(GTM_API_KEY):           ''
