Add Ton Macron administration

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -36,6 +36,10 @@ security:
             - ROLE_APP_ADMIN_JE_MARCHE_LIST
             - ROLE_APP_ADMIN_JE_MARCHE_VIEW
             - ROLE_APP_ADMIN_JE_MARCHE_DELETE
+            - ROLE_APP_ADMIN_TON_MACRON_CHOICE_ALL
+            - ROLE_APP_ADMIN_TON_MACRON_FRIEND_INVITATION_EXPORT
+            - ROLE_APP_ADMIN_TON_MACRON_FRIEND_INVITATION_LIST
+            - ROLE_APP_ADMIN_TON_MACRON_FRIEND_INVITATION_VIEW
 
         ROLE_TERRITORY:
             - ROLE_ACCESS_DASHBOARD
